--- a/it final/css/styles.css
+++ b/it final/css/styles.css
@@ -129,7 +129,7 @@ div#section_3r {
   height: 100%;
 }
 div#section_2 p {
-  width: 328px
+  width: 328px;
   margin: 0 auto;
   text-align: center;
   color: rgb(11, 199, 199);
